# slack-rs

./: .gitignore  CHANGELOG.md  Cargo.toml
examples/: future.rs
src/: error.rs  events.rs  lib.rs
src/future/: client.rs
