[package]
name = "slack"
version = "0.16.0"
authors = ["Benjamin Elder <bentheelder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
repository = "https://github.com/slack-rs/slack-rs.git"
documentation = "http://slack-rs.github.io/slack-rs/slack/index.html"
description = "slack realtime messaging client: https://api.slack.com/bot-users"
license = "Apache-2.0"

[dependencies]
reqwest = "0.9.11"
slack_api = { version = "0.21.0", features = ["reqwest"] }
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
tungstenite = "0.6.1"
log = "0.3.7"
cfg-if = "0.1.0"
futures = { version = "0.1.11", optional = true }
tokio-tungstenite = { version = "0.6.0", optional = true }
tokio = { version = "0.1.13", optional = true }
tokio-tls = { version = "0.2.0", optional = true }
native-tls = { version = "0.2.2", optional = true }
url = { version = "1.4.0", optional = true }

[dev-dependencies]
futures = "0.1.11"

[features]
"future" = ["futures", "tokio-tungstenite", "tokio", "tokio-tls", "url", "native-tls"]

[patch.crates-io]
reqwest = {git = "https://github.com/sumeet/reqwest", branch = "master"}
