[package]
name = "slack"
version = "0.17.0"
authors = ["Benjamin Elder <bentheelder@gmail.com>", "Matt Jones <mthjones@gmail.com>", "Michael Stella <michael573114@gmail.com>"]
repository = "https://github.com/slack-rs/slack-rs.git"
documentation = "http://slack-rs.github.io/slack-rs/slack/index.html"
description = "slack realtime messaging client: https://api.slack.com/bot-users"
license = "Apache-2.0"

[dependencies]
reqwest = "0.10"
slack_api = { version = "0.22", features = ["reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
tungstenite = "0.10"
log = "0.3.7"
cfg-if = "0.1"
url = "2"
futures = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.10", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies]
futures = "0.1.11"
tokio-core = "0.1"

[features]
"future" = ["futures", "tokio-tungstenite", "tokio-core", "tokio-tls", "native-tls"]
